syntax = "proto3";

package dev.pagefault.eve.grpc;

option java_multiple_files = true;
option java_generic_services = true;

message Empty {
}

message RequestStatus {
	bool success = 1;
	string message = 2;
}
